video/custom-player/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-echo
  namespace: ome-player
spec:
  podSelector:
    matchLabels:
      app: player
  ingress:
  - ports:
    - port: http
